# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __main__.py  charging_soup.py  getting_base_url.py  getting_resourse.py  html.py  logging.conf  normalizing_string.py  page_loader.py  preparing_html.py  resources.py  storage.py  url.py
page_loader/scripts/: pageloader.py
tests/: test_page_loader.py
tests/fixtures/: application.css
tests/ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html
