[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Андрей Трушин"]
packages = [
  { include = "page_loader" },
]
repository = "https://github.com/Aannddyy18/python-project-lvl3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
requests-mock = "^1.9.3"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
requests = "^2.27.1"
requests-mock = "^1.9.3"
beautifulsoup4 = "^4.10.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.pageloader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
